# forth-interpreter

./: CMakeLists.txt  Lexeme.cpp  Lexeme.h  Parser.cpp  Preprocessor.cpp  Preprocessor.h  README.md  main.cpp
src/: Codeblock.cpp  Environment.cpp  Environment.h  Executable.cpp  Executable.h  For.cpp  GrammaticalAnalyzer.cpp  GrammaticalAnalyzer.h  If.cpp  Lexeme.h  Literals.cpp  Literals.h  Operator.cpp  Parser.cpp  Parser.h  Preprocessor.cpp  StackElement.cpp  StackElement.h  Switch.cpp  VariableCreation.cpp  While.cpp  main.cpp
